--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
-#player{
- position: absolute;
- top: 100px;
- left: 0px;
+#player {
+    position: absolute;
+    top: 100px; /* 初期位置 (縦) */
+    left: 0px; /* 初期位置 (横) */
+    font-size: 40px; /* プレイヤーの文字サイズ */
+    width: 64px;
+    height: 64px;
+    text-align: center;
+    line-height: 64px;
 }
-.stage{
- width: 64px;
- height: 64px;
+
+.stage {
+    position: absolute;
+    width: 64px;
+    height: 64px;
 }
-#stage{
- position: absolute;
- top: 140px;
- left: 0px;
+
+#stage {
+    position: absolute;
+    top: 140px;
+    left: 0px;
+    width: 640px; /* ステージの横幅 */
+    height: 384px; /* ステージの高さ */
+    background-color: lightblue; /* 背景色 */
 }
